# presign

./: .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker_env.example  eslint.config.cjs  mail_texts.json  manage.py  presign.service  pyproject.toml  pytest.ini  status_texts.json
.github/workflows/: ci.yml  docker.yml
fixtures/: example.yaml
image/: Dockerfile  run.sh
presign/: asgi.py  conftest.py  settings.py  urls.py  views.py  wsgi.py
presign/base/: admin.py  apps.py  constants.py  exceptions.py  fields.py  middleware.py  models.py  renderers.py  signals.py  tests.py  utils.py  views.py
presign/base/management/commands/: dumpdata_no_scopes.py  import_text_defaults.py
presign/base/migrations/: 0001_initial.py  0002_event_email_textsstore.py  0003_alter_event_lock_date_alter_event_signup_end_and_more.py  0004_organizer_email_textsstore.py  0005_globalsettings_email_textsstore.py  0006_globalsettings_status_textsstore_and_more.py  0007_participantcustommessage.py  0007_participantlogevent.py  0008_remove_historicalparticipant_public_comment_and_more.py
presign/base/models/: __init__.py  event.py  log.py  organizer.py  participant.py  questions.py  texts.py  user.py
presign/base/static/base/: main.scss  main.ts
presign/base/templates/: base.html
presign/base/templates/base/forms/widgets/: textarea.html  textfield.html
presign/base/templates/errors/: 404.html  500.html
presign/base/templates/formset_renderers/: card_formset_renderer.html
presign/base/templates/mail/: base.html
presign/base/templates/mail/fragments/: one_column_end.html  one_column_start.html  spacer.html
presign/base/templates/mail/participant/: state_change.html
presign/base/templates/questions/answers/: choice.html  file.html  multiple_choice.html
presign/base/templates/registration/: login.html
presign/base/templatetags/: presign_tags.py
presign/base/tests/: test_markdownify.py  test_secure_media.py
presign/checkin/: apps.py  middleware.py  models.py  urls.py
presign/checkin/migrations/: 0001_initial.py
presign/checkin/templates/checkin/: base.html
presign/checkin/templates/checkin/event/: _locations_list.html  detail.html
presign/checkin/templates/checkin/location/: _participants_list.html  _participants_list_minimal.html  create.html  detail.html
presign/checkin/views/: __init__.py  event.py  location.py
presign/control/: apps.py  constants.py  context.py  forms.py  logdisplay.py  middleware.py  tests.py  urls.py
presign/control/static/control/: export.ts  question_detail.ts
presign/control/templates/control/: base.html  confirm_action.html
presign/control/templates/control/event/: confirm_action.html  create.html  detail.html  export.html  list.html  my_list.html  update.html
presign/control/templates/control/organizer/: create.html  detail.html  list.html  settings.html
presign/control/templates/control/participant/: _participant_answers.html  _participant_table.html  base.html  detail.html  list.html  state_change_confirmation.html
presign/control/templates/control/questionnaire/: clone.html  create_block.html  detail.html  list.html  my_list.html  question_update.html  update.html  update_block.html
presign/control/templates/control/user/: password_change_form.html
presign/control/templatetags/: control_helpers.py
presign/control/tests/: conftest.py  test_organizer.py  test_participant.py
presign/control/views/: __init__.py  event.py  organizer.py  participant.py  questionnaire.py  user.py
presign/formats/de/: formats.py
presign/formats/en/: formats.py
presign/locale/de/LC_MESSAGES/: django.po
presign/settings/: __init__.py  base.py  dev.py  prod.py  test.py
presign/signup/: apps.py  forms.py  middleware.py  urls.py  views.py
presign/signup/templates/signup/: base.html  participant_details.html  signup.html  signup_not_possible.html  update.html  withdraw_confirmation.html
presign/signup/templates/signup/fragments/: contact_information.html  participant_answers.html  status_banner.html
presign/templates/: root.html
presign/tests/: test_general.py
