[tool.poetry]
name = "presign"
version = "0.0.1"
description = ""
authors = ["pajowu <git@ca.pajowu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
django-allauth = "^65.0.2"
pyyaml = "^6.0.2"
django-bootstrap5 = "^24.3"
django-compressor = "^4.5.1"
django-libsass = "^0.9"
django-scopes = "^2.0.0"
django-phonenumber-field = { extras = ["phonenumbers"], version = "^8.0.0" }
django-debug-toolbar = "^4.4.6"
django-clone = "^5.3.3"
django-simple-history = "^3.7.0"
django-livereload-server = "^0.5.1"
django-i18nfield = "^1.9.4"
django-configurations = { extras = ["database"], version = "^2.5.1" }
django-hierarkey = "^1.2.0"
markdown = "^3.7"
nh3 = "^0.2.18"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
djlint = "^1.19.13"
pillow = "^9.4.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-playwright = "^0.3.0"
pytest-cov = "^4.0.0"
pytest-factoryboy = "^2.5.1"
django-eml-email-backend = "^0.1"
playwright = ">=1.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
src_paths = "presign"
default_section = "THIRDPARTY"
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.djlint]
preserve_blank_lines = true
ignore = "T003,H006,H030,H031"


[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
FAIL_INVALID_TEMPLATE_VARS = "True"
DJANGO_SETTINGS_MODULE = "presign.settings"
addopts = "--cov=presign --cov-report html --dc=Test"
